# ftm-random

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  cliff.toml  main.py  pyproject.toml
.github/workflows/: prek.yml  release.yml  test.yml
ftm_random/: inbox.py  main.py
tests/: test_connected.py  test_validate.py
