[project]
name = "ftm-random"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["click>=8.3.1", "faker>=40.5.1", "followthemoney>=4.5.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ftm_random"]

[project.scripts]
ftm-random = "ftm_random.main:generate_entities"
