[project]
name = "ftm-random"
version = "0.2.2"
description = "Add your description here"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = ["click>=8.3.1", "faker>=40.5.1", "followthemoney>=4.5.3"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ftm_random"]

[project.scripts]
ftm-random = "ftm_random.main:generate_entities"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
